<resources>
    <string name="app_name">Tutorial_4</string>
    <string name="tvTitle">Register Student</string>
    <string name="edtStudentId" />
    <string name="tvYear">Select Achedamic Year</string>
    <string name="tvSemester">Select the Semester</string>
    <string name="cbAgree">I agree to terms and conditions</string>
    <string name="btnConfirm">Submit</string>
    <string name="btnCancel">Cancel</string>

    <string-array name="years">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="semesters">
        <item>Semester 1</item>
        <item>Semester 2</item>
    </string-array>
</resources>