<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/tvTitle"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/edtStudentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="Enter Student ID"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tvYear"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spnYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:entries="@array/years"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/tvSemester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tvSemester"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spnSemester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:entries="@array/semesters"
        android:spinnerMode="dropdown" />

    <CheckBox
        android:id="@+id/cbAgree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/cbAgree" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="submit"
        android:text="@string/btnConfirm" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="submit"
        android:text="@string/btnCancel" />
</LinearLayout>